// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the prebuilt parser parses files consistently: Args.sand 1`] = `
Object {
  "imports": Array [],
  "location": Object {
    "firstColumn": 0,
    "firstLine": 1,
    "lastColumn": 1,
    "lastLine": 5,
  },
  "packageName": null,
  "privClasses": Array [],
  "pubClass": Object {
    "copies": Array [],
    "isPub": true,
    "items": Array [
      Object {
        "accessModifier": null,
        "args": Array [
          Object {
            "location": Object {
              "firstColumn": 12,
              "firstLine": 2,
              "lastColumn": 24,
              "lastLine": 2,
            },
            "name": "elem",
            "type": "ArgDef",
            "valueType": Object {
              "args": Array [],
              "location": Object {
                "firstColumn": 18,
                "firstLine": 2,
                "lastColumn": 24,
                "lastLine": 2,
              },
              "name": "String",
              "type": "Type",
            },
          },
          Object {
            "location": Object {
              "firstColumn": 26,
              "firstLine": 2,
              "lastColumn": 40,
              "lastLine": 2,
            },
            "name": "arr",
            "type": "ArgDef",
            "valueType": Object {
              "args": Array [
                Object {
                  "args": Array [],
                  "location": Object {
                    "firstColumn": 31,
                    "firstLine": 2,
                    "lastColumn": 37,
                    "lastLine": 2,
                  },
                  "name": "String",
                  "type": "Type",
                },
              ],
              "location": Object {
                "firstColumn": 31,
                "firstLine": 2,
                "lastColumn": 40,
                "lastLine": 2,
              },
              "name": "rlist",
              "type": "Type",
            },
          },
        ],
        "body": Array [],
        "location": Object {
          "firstColumn": 33,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 4,
        },
        "name": "indexOf",
        "returnType": Object {
          "args": Array [],
          "location": Object {
            "firstColumn": 43,
            "firstLine": 2,
            "lastColumn": 46,
            "lastLine": 2,
          },
          "name": "int",
          "type": "Type",
        },
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
    ],
    "location": Object {
      "firstColumn": 0,
      "firstLine": 1,
      "lastColumn": 1,
      "lastLine": 5,
    },
    "name": "Args",
    "overridability": "Final",
    "superClass": null,
    "type": "Class",
    "typeArgDefs": Array [
      Object {
        "constraint": Object {
          "constraintType": "None",
        },
        "location": Object {
          "firstColumn": 15,
          "firstLine": 1,
          "lastColumn": 16,
          "lastLine": 1,
        },
        "name": "T",
        "type": "TypeArgDef",
      },
      Object {
        "constraint": Object {
          "constraintType": "Extends",
          "superClass": Object {
            "args": Array [],
            "location": Object {
              "firstColumn": 28,
              "firstLine": 1,
              "lastColumn": 31,
              "lastLine": 1,
            },
            "name": "Foo",
            "type": "Type",
          },
        },
        "location": Object {
          "firstColumn": 18,
          "firstLine": 1,
          "lastColumn": 31,
          "lastLine": 1,
        },
        "name": "U",
        "type": "TypeArgDef",
      },
    ],
    "useStatements": Array [],
  },
  "type": "File",
  "useStatements": Array [],
}
`;

exports[`the prebuilt parser parses files consistently: AssignableExpressions.sand 1`] = `
Object {
  "imports": Array [],
  "location": Object {
    "firstColumn": 0,
    "firstLine": 1,
    "lastColumn": 1,
    "lastLine": 63,
  },
  "packageName": null,
  "privClasses": Array [
    Object {
      "copies": Array [],
      "isPub": false,
      "items": Array [
        Object {
          "accessModifier": null,
          "args": Array [],
          "body": Array [
            Object {
              "assignee": Object {
                "left": Object {
                  "left": Object {
                    "left": Object {
                      "location": Object {
                        "firstColumn": 8,
                        "firstLine": 41,
                        "lastColumn": 9,
                        "lastLine": 41,
                      },
                      "name": "a",
                      "type": "Identifier",
                    },
                    "location": Object {
                      "firstColumn": 8,
                      "firstLine": 41,
                      "lastColumn": 11,
                      "lastLine": 41,
                    },
                    "right": "b",
                    "type": "DotExpr",
                  },
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 41,
                    "lastColumn": 13,
                    "lastLine": 41,
                  },
                  "right": "c",
                  "type": "DotExpr",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 41,
                  "lastColumn": 15,
                  "lastLine": 41,
                },
                "right": "d",
                "type": "DotExpr",
              },
              "assignmentType": "=",
              "location": Object {
                "firstColumn": 8,
                "firstLine": 41,
                "lastColumn": 20,
                "lastLine": 41,
              },
              "type": "Assignment",
              "value": Object {
                "location": Object {
                  "firstColumn": 18,
                  "firstLine": 41,
                  "lastColumn": 19,
                  "lastLine": 41,
                },
                "name": "e",
                "type": "Identifier",
              },
            },
          ],
          "location": Object {
            "firstColumn": 20,
            "firstLine": 39,
            "lastColumn": 5,
            "lastLine": 42,
          },
          "name": "dotDotDot",
          "returnType": null,
          "type": "MethodDeclaration",
          "typeArgs": Array [],
        },
        Object {
          "accessModifier": null,
          "args": Array [],
          "body": Array [
            Object {
              "assignee": Object {
                "left": Object {
                  "left": Object {
                    "left": Object {
                      "location": Object {
                        "firstColumn": 8,
                        "firstLine": 45,
                        "lastColumn": 9,
                        "lastLine": 45,
                      },
                      "name": "a",
                      "type": "Identifier",
                    },
                    "location": Object {
                      "firstColumn": 8,
                      "firstLine": 45,
                      "lastColumn": 12,
                      "lastLine": 45,
                    },
                    "right": Object {
                      "location": Object {
                        "firstColumn": 10,
                        "firstLine": 45,
                        "lastColumn": 11,
                        "lastLine": 45,
                      },
                      "name": "b",
                      "type": "Identifier",
                    },
                    "type": "IndexExpr",
                  },
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 45,
                    "lastColumn": 14,
                    "lastLine": 45,
                  },
                  "right": "c",
                  "type": "DotExpr",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 45,
                  "lastColumn": 16,
                  "lastLine": 45,
                },
                "right": "d",
                "type": "DotExpr",
              },
              "assignmentType": "=",
              "location": Object {
                "firstColumn": 8,
                "firstLine": 45,
                "lastColumn": 21,
                "lastLine": 45,
              },
              "type": "Assignment",
              "value": Object {
                "location": Object {
                  "firstColumn": 19,
                  "firstLine": 45,
                  "lastColumn": 20,
                  "lastLine": 45,
                },
                "name": "e",
                "type": "Identifier",
              },
            },
          ],
          "location": Object {
            "firstColumn": 20,
            "firstLine": 39,
            "lastColumn": 5,
            "lastLine": 46,
          },
          "name": "indexDotDot",
          "returnType": null,
          "type": "MethodDeclaration",
          "typeArgs": Array [],
        },
        Object {
          "accessModifier": null,
          "args": Array [],
          "body": Array [
            Object {
              "assignee": Object {
                "left": Object {
                  "left": Object {
                    "left": Object {
                      "location": Object {
                        "firstColumn": 8,
                        "firstLine": 49,
                        "lastColumn": 9,
                        "lastLine": 49,
                      },
                      "name": "a",
                      "type": "Identifier",
                    },
                    "location": Object {
                      "firstColumn": 8,
                      "firstLine": 49,
                      "lastColumn": 11,
                      "lastLine": 49,
                    },
                    "right": "b",
                    "type": "DotExpr",
                  },
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 49,
                    "lastColumn": 14,
                    "lastLine": 49,
                  },
                  "right": Object {
                    "location": Object {
                      "firstColumn": 12,
                      "firstLine": 49,
                      "lastColumn": 13,
                      "lastLine": 49,
                    },
                    "name": "c",
                    "type": "Identifier",
                  },
                  "type": "IndexExpr",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 49,
                  "lastColumn": 17,
                  "lastLine": 49,
                },
                "right": Object {
                  "location": Object {
                    "firstColumn": 15,
                    "firstLine": 49,
                    "lastColumn": 16,
                    "lastLine": 49,
                  },
                  "name": "d",
                  "type": "Identifier",
                },
                "type": "IndexExpr",
              },
              "assignmentType": "=",
              "location": Object {
                "firstColumn": 8,
                "firstLine": 49,
                "lastColumn": 22,
                "lastLine": 49,
              },
              "type": "Assignment",
              "value": Object {
                "location": Object {
                  "firstColumn": 20,
                  "firstLine": 49,
                  "lastColumn": 21,
                  "lastLine": 49,
                },
                "name": "e",
                "type": "Identifier",
              },
            },
          ],
          "location": Object {
            "firstColumn": 20,
            "firstLine": 39,
            "lastColumn": 5,
            "lastLine": 50,
          },
          "name": "dotIndexIndex",
          "returnType": null,
          "type": "MethodDeclaration",
          "typeArgs": Array [],
        },
        Object {
          "accessModifier": null,
          "args": Array [],
          "body": Array [
            Object {
              "assignee": Object {
                "left": Object {
                  "left": Object {
                    "left": Object {
                      "location": Object {
                        "firstColumn": 8,
                        "firstLine": 53,
                        "lastColumn": 9,
                        "lastLine": 53,
                      },
                      "name": "a",
                      "type": "Identifier",
                    },
                    "location": Object {
                      "firstColumn": 8,
                      "firstLine": 53,
                      "lastColumn": 12,
                      "lastLine": 53,
                    },
                    "right": Object {
                      "location": Object {
                        "firstColumn": 10,
                        "firstLine": 53,
                        "lastColumn": 11,
                        "lastLine": 53,
                      },
                      "name": "b",
                      "type": "Identifier",
                    },
                    "type": "IndexExpr",
                  },
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 53,
                    "lastColumn": 15,
                    "lastLine": 53,
                  },
                  "right": Object {
                    "location": Object {
                      "firstColumn": 13,
                      "firstLine": 53,
                      "lastColumn": 14,
                      "lastLine": 53,
                    },
                    "name": "c",
                    "type": "Identifier",
                  },
                  "type": "IndexExpr",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 53,
                  "lastColumn": 18,
                  "lastLine": 53,
                },
                "right": Object {
                  "location": Object {
                    "firstColumn": 16,
                    "firstLine": 53,
                    "lastColumn": 17,
                    "lastLine": 53,
                  },
                  "name": "d",
                  "type": "Identifier",
                },
                "type": "IndexExpr",
              },
              "assignmentType": "=",
              "location": Object {
                "firstColumn": 8,
                "firstLine": 53,
                "lastColumn": 23,
                "lastLine": 53,
              },
              "type": "Assignment",
              "value": Object {
                "location": Object {
                  "firstColumn": 21,
                  "firstLine": 53,
                  "lastColumn": 22,
                  "lastLine": 53,
                },
                "name": "e",
                "type": "Identifier",
              },
            },
          ],
          "location": Object {
            "firstColumn": 20,
            "firstLine": 39,
            "lastColumn": 5,
            "lastLine": 54,
          },
          "name": "indexIndexIndex",
          "returnType": null,
          "type": "MethodDeclaration",
          "typeArgs": Array [],
        },
        Object {
          "accessModifier": null,
          "args": Array [],
          "body": Array [
            Object {
              "assignee": Object {
                "left": Object {
                  "left": Object {
                    "args": Array [],
                    "callee": Object {
                      "location": Object {
                        "firstColumn": 8,
                        "firstLine": 57,
                        "lastColumn": 9,
                        "lastLine": 57,
                      },
                      "name": "a",
                      "type": "Identifier",
                    },
                    "location": Object {
                      "firstColumn": 8,
                      "firstLine": 57,
                      "lastColumn": 11,
                      "lastLine": 57,
                    },
                    "type": "FunctionCall",
                    "typeArgs": Array [],
                  },
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 57,
                    "lastColumn": 13,
                    "lastLine": 57,
                  },
                  "right": "b",
                  "type": "DotExpr",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 57,
                  "lastColumn": 15,
                  "lastLine": 57,
                },
                "right": "c",
                "type": "DotExpr",
              },
              "assignmentType": "=",
              "location": Object {
                "firstColumn": 8,
                "firstLine": 57,
                "lastColumn": 20,
                "lastLine": 57,
              },
              "type": "Assignment",
              "value": Object {
                "location": Object {
                  "firstColumn": 18,
                  "firstLine": 57,
                  "lastColumn": 19,
                  "lastLine": 57,
                },
                "name": "d",
                "type": "Identifier",
              },
            },
          ],
          "location": Object {
            "firstColumn": 20,
            "firstLine": 39,
            "lastColumn": 5,
            "lastLine": 58,
          },
          "name": "callDotDot",
          "returnType": null,
          "type": "MethodDeclaration",
          "typeArgs": Array [],
        },
        Object {
          "accessModifier": null,
          "args": Array [],
          "body": Array [
            Object {
              "assignee": Object {
                "left": Object {
                  "left": Object {
                    "args": Array [],
                    "callee": Object {
                      "location": Object {
                        "firstColumn": 8,
                        "firstLine": 61,
                        "lastColumn": 9,
                        "lastLine": 61,
                      },
                      "name": "a",
                      "type": "Identifier",
                    },
                    "location": Object {
                      "firstColumn": 8,
                      "firstLine": 61,
                      "lastColumn": 11,
                      "lastLine": 61,
                    },
                    "type": "FunctionCall",
                    "typeArgs": Array [],
                  },
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 61,
                    "lastColumn": 14,
                    "lastLine": 61,
                  },
                  "right": Object {
                    "location": Object {
                      "firstColumn": 12,
                      "firstLine": 61,
                      "lastColumn": 13,
                      "lastLine": 61,
                    },
                    "name": "b",
                    "type": "Identifier",
                  },
                  "type": "IndexExpr",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 61,
                  "lastColumn": 17,
                  "lastLine": 61,
                },
                "right": Object {
                  "location": Object {
                    "firstColumn": 15,
                    "firstLine": 61,
                    "lastColumn": 16,
                    "lastLine": 61,
                  },
                  "name": "c",
                  "type": "Identifier",
                },
                "type": "IndexExpr",
              },
              "assignmentType": "=",
              "location": Object {
                "firstColumn": 8,
                "firstLine": 61,
                "lastColumn": 22,
                "lastLine": 61,
              },
              "type": "Assignment",
              "value": Object {
                "location": Object {
                  "firstColumn": 20,
                  "firstLine": 61,
                  "lastColumn": 21,
                  "lastLine": 61,
                },
                "name": "d",
                "type": "Identifier",
              },
            },
          ],
          "location": Object {
            "firstColumn": 20,
            "firstLine": 39,
            "lastColumn": 5,
            "lastLine": 62,
          },
          "name": "callIndexIndex",
          "returnType": null,
          "type": "MethodDeclaration",
          "typeArgs": Array [],
        },
      ],
      "location": Object {
        "firstColumn": 0,
        "firstLine": 1,
        "lastColumn": 1,
        "lastLine": 63,
      },
      "name": "DoubleEndings",
      "overridability": "Final",
      "superClass": null,
      "type": "Class",
      "typeArgDefs": Array [],
      "useStatements": Array [],
    },
  ],
  "pubClass": Object {
    "copies": Array [],
    "isPub": true,
    "items": Array [
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 3,
                "lastColumn": 9,
                "lastLine": 3,
              },
              "name": "a",
              "type": "Identifier",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 3,
              "lastColumn": 14,
              "lastLine": 3,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 12,
                "firstLine": 3,
                "lastColumn": 13,
                "lastLine": 3,
              },
              "name": "b",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 4,
        },
        "name": "simple",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "left": Object {
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 7,
                  "lastColumn": 9,
                  "lastLine": 7,
                },
                "name": "a",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 7,
                "lastColumn": 11,
                "lastLine": 7,
              },
              "right": "b",
              "type": "DotExpr",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 7,
              "lastColumn": 16,
              "lastLine": 7,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 14,
                "firstLine": 7,
                "lastColumn": 15,
                "lastLine": 7,
              },
              "name": "c",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 8,
        },
        "name": "dot",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "left": Object {
                "left": Object {
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 11,
                    "lastColumn": 9,
                    "lastLine": 11,
                  },
                  "name": "a",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 11,
                  "lastColumn": 11,
                  "lastLine": 11,
                },
                "right": "b",
                "type": "DotExpr",
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 11,
                "lastColumn": 13,
                "lastLine": 11,
              },
              "right": "c",
              "type": "DotExpr",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 11,
              "lastColumn": 18,
              "lastLine": 11,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 16,
                "firstLine": 11,
                "lastColumn": 17,
                "lastLine": 11,
              },
              "name": "d",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 12,
        },
        "name": "dotDot",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "left": Object {
                "left": Object {
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 15,
                    "lastColumn": 9,
                    "lastLine": 15,
                  },
                  "name": "a",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 15,
                  "lastColumn": 11,
                  "lastLine": 15,
                },
                "right": "b",
                "type": "DotExpr",
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 15,
                "lastColumn": 14,
                "lastLine": 15,
              },
              "right": Object {
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 15,
                  "lastColumn": 13,
                  "lastLine": 15,
                },
                "name": "c",
                "type": "Identifier",
              },
              "type": "IndexExpr",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 15,
              "lastColumn": 19,
              "lastLine": 15,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 17,
                "firstLine": 15,
                "lastColumn": 18,
                "lastLine": 15,
              },
              "name": "d",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 16,
        },
        "name": "dotIndex",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "left": Object {
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 19,
                  "lastColumn": 9,
                  "lastLine": 19,
                },
                "name": "a",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 19,
                "lastColumn": 12,
                "lastLine": 19,
              },
              "right": Object {
                "location": Object {
                  "firstColumn": 10,
                  "firstLine": 19,
                  "lastColumn": 11,
                  "lastLine": 19,
                },
                "name": "b",
                "type": "Identifier",
              },
              "type": "IndexExpr",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 19,
              "lastColumn": 17,
              "lastLine": 19,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 15,
                "firstLine": 19,
                "lastColumn": 16,
                "lastLine": 19,
              },
              "name": "c",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 20,
        },
        "name": "index",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "left": Object {
                "left": Object {
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 23,
                    "lastColumn": 9,
                    "lastLine": 23,
                  },
                  "name": "a",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 23,
                  "lastColumn": 12,
                  "lastLine": 23,
                },
                "right": Object {
                  "location": Object {
                    "firstColumn": 10,
                    "firstLine": 23,
                    "lastColumn": 11,
                    "lastLine": 23,
                  },
                  "name": "b",
                  "type": "Identifier",
                },
                "type": "IndexExpr",
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 23,
                "lastColumn": 14,
                "lastLine": 23,
              },
              "right": "c",
              "type": "DotExpr",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 23,
              "lastColumn": 19,
              "lastLine": 23,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 17,
                "firstLine": 23,
                "lastColumn": 18,
                "lastLine": 23,
              },
              "name": "d",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 24,
        },
        "name": "indexDot",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "left": Object {
                "left": Object {
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 27,
                    "lastColumn": 9,
                    "lastLine": 27,
                  },
                  "name": "a",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 27,
                  "lastColumn": 12,
                  "lastLine": 27,
                },
                "right": Object {
                  "location": Object {
                    "firstColumn": 10,
                    "firstLine": 27,
                    "lastColumn": 11,
                    "lastLine": 27,
                  },
                  "name": "b",
                  "type": "Identifier",
                },
                "type": "IndexExpr",
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 27,
                "lastColumn": 15,
                "lastLine": 27,
              },
              "right": Object {
                "location": Object {
                  "firstColumn": 13,
                  "firstLine": 27,
                  "lastColumn": 14,
                  "lastLine": 27,
                },
                "name": "c",
                "type": "Identifier",
              },
              "type": "IndexExpr",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 27,
              "lastColumn": 20,
              "lastLine": 27,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 18,
                "firstLine": 27,
                "lastColumn": 19,
                "lastLine": 27,
              },
              "name": "d",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 28,
        },
        "name": "indexIndex",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "left": Object {
                "args": Array [],
                "callee": Object {
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 31,
                    "lastColumn": 9,
                    "lastLine": 31,
                  },
                  "name": "a",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 31,
                  "lastColumn": 11,
                  "lastLine": 31,
                },
                "type": "FunctionCall",
                "typeArgs": Array [],
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 31,
                "lastColumn": 13,
                "lastLine": 31,
              },
              "right": "b",
              "type": "DotExpr",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 31,
              "lastColumn": 18,
              "lastLine": 31,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 16,
                "firstLine": 31,
                "lastColumn": 17,
                "lastLine": 31,
              },
              "name": "c",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 32,
        },
        "name": "callDot",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "assignee": Object {
              "left": Object {
                "args": Array [],
                "callee": Object {
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 35,
                    "lastColumn": 9,
                    "lastLine": 35,
                  },
                  "name": "a",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 35,
                  "lastColumn": 11,
                  "lastLine": 35,
                },
                "type": "FunctionCall",
                "typeArgs": Array [],
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 35,
                "lastColumn": 14,
                "lastLine": 35,
              },
              "right": Object {
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 35,
                  "lastColumn": 13,
                  "lastLine": 35,
                },
                "name": "b",
                "type": "Identifier",
              },
              "type": "IndexExpr",
            },
            "assignmentType": "=",
            "location": Object {
              "firstColumn": 8,
              "firstLine": 35,
              "lastColumn": 19,
              "lastLine": 35,
            },
            "type": "Assignment",
            "value": Object {
              "location": Object {
                "firstColumn": 17,
                "firstLine": 35,
                "lastColumn": 18,
                "lastLine": 35,
              },
              "name": "c",
              "type": "Identifier",
            },
          },
        ],
        "location": Object {
          "firstColumn": 32,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 36,
        },
        "name": "callIndex",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
    ],
    "location": Object {
      "firstColumn": 0,
      "firstLine": 1,
      "lastColumn": 1,
      "lastLine": 37,
    },
    "name": "AssignableExpressions",
    "overridability": "Final",
    "superClass": null,
    "type": "Class",
    "typeArgDefs": Array [],
    "useStatements": Array [],
  },
  "type": "File",
  "useStatements": Array [],
}
`;

exports[`the prebuilt parser parses files consistently: CompoundExpressions.sand 1`] = `
Object {
  "imports": Array [],
  "location": Object {
    "firstColumn": 0,
    "firstLine": 1,
    "lastColumn": 1,
    "lastLine": 64,
  },
  "packageName": null,
  "privClasses": Array [],
  "pubClass": Object {
    "copies": Array [],
    "isPub": true,
    "items": Array [
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 3,
                "lastColumn": 11,
                "lastLine": 3,
              },
              "name": "bar",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 3,
              "lastColumn": 13,
              "lastLine": 3,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 4,
                "lastColumn": 11,
                "lastLine": 4,
              },
              "name": "bar",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 4,
              "lastColumn": 13,
              "lastLine": 4,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 5,
                "lastColumn": 11,
                "lastLine": 5,
              },
              "name": "bar",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 5,
              "lastColumn": 13,
              "lastLine": 5,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
        ],
        "location": Object {
          "firstColumn": 29,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 6,
        },
        "name": "foo",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 9,
                "lastColumn": 11,
                "lastLine": 9,
              },
              "name": "bar",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 9,
              "lastColumn": 13,
              "lastLine": 9,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 10,
                "lastColumn": 11,
                "lastLine": 10,
              },
              "name": "bar",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 10,
              "lastColumn": 13,
              "lastLine": 10,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 11,
                "lastColumn": 11,
                "lastLine": 11,
              },
              "name": "bar",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 11,
              "lastColumn": 13,
              "lastLine": 11,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
        ],
        "location": Object {
          "firstColumn": 29,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 12,
        },
        "name": "foo2",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "alternatives": Array [],
            "body": Array [
              Object {
                "args": Array [],
                "callee": Object {
                  "location": Object {
                    "firstColumn": 12,
                    "firstLine": 16,
                    "lastColumn": 16,
                    "lastLine": 16,
                  },
                  "name": "foo2",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 16,
                  "lastColumn": 18,
                  "lastLine": 16,
                },
                "type": "FunctionCall",
                "typeArgs": Array [],
              },
            ],
            "condition": Object {
              "args": Array [],
              "callee": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 15,
                  "lastColumn": 14,
                  "lastLine": 15,
                },
                "name": "baz",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 15,
                "lastColumn": 16,
                "lastLine": 15,
              },
              "type": "FunctionCall",
              "typeArgs": Array [],
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 15,
              "lastColumn": 9,
              "lastLine": 17,
            },
            "type": "If",
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 18,
                "lastColumn": 11,
                "lastLine": 18,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 18,
              "lastColumn": 13,
              "lastLine": 18,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
        ],
        "location": Object {
          "firstColumn": 29,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 19,
        },
        "name": "bar",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "alternatives": Array [],
            "body": Array [
              Object {
                "args": Array [],
                "callee": Object {
                  "location": Object {
                    "firstColumn": 12,
                    "firstLine": 23,
                    "lastColumn": 16,
                    "lastLine": 23,
                  },
                  "name": "foo2",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 23,
                  "lastColumn": 18,
                  "lastLine": 23,
                },
                "type": "FunctionCall",
                "typeArgs": Array [],
              },
            ],
            "condition": Object {
              "args": Array [],
              "callee": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 22,
                  "lastColumn": 14,
                  "lastLine": 22,
                },
                "name": "baz",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 22,
                "lastColumn": 16,
                "lastLine": 22,
              },
              "type": "FunctionCall",
              "typeArgs": Array [],
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 22,
              "lastColumn": 9,
              "lastLine": 24,
            },
            "type": "If",
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 25,
                "lastColumn": 11,
                "lastLine": 25,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 25,
              "lastColumn": 13,
              "lastLine": 25,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
        ],
        "location": Object {
          "firstColumn": 29,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 26,
        },
        "name": "bar2",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "alternatives": Array [],
            "body": Array [
              Object {
                "args": Array [],
                "callee": Object {
                  "location": Object {
                    "firstColumn": 12,
                    "firstLine": 30,
                    "lastColumn": 16,
                    "lastLine": 30,
                  },
                  "name": "foo2",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 30,
                  "lastColumn": 18,
                  "lastLine": 30,
                },
                "type": "FunctionCall",
                "typeArgs": Array [],
              },
            ],
            "condition": Object {
              "args": Array [],
              "callee": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 29,
                  "lastColumn": 14,
                  "lastLine": 29,
                },
                "name": "baz",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 29,
                "lastColumn": 16,
                "lastLine": 29,
              },
              "type": "FunctionCall",
              "typeArgs": Array [],
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 29,
              "lastColumn": 9,
              "lastLine": 31,
            },
            "type": "If",
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 32,
                "lastColumn": 11,
                "lastLine": 32,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 32,
              "lastColumn": 13,
              "lastLine": 32,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 33,
                "lastColumn": 11,
                "lastLine": 33,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 33,
              "lastColumn": 13,
              "lastLine": 33,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
        ],
        "location": Object {
          "firstColumn": 29,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 34,
        },
        "name": "bar3",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "alternatives": Array [],
            "body": Array [
              Object {
                "args": Array [],
                "callee": Object {
                  "location": Object {
                    "firstColumn": 12,
                    "firstLine": 38,
                    "lastColumn": 16,
                    "lastLine": 38,
                  },
                  "name": "foo2",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 38,
                  "lastColumn": 18,
                  "lastLine": 38,
                },
                "type": "FunctionCall",
                "typeArgs": Array [],
              },
            ],
            "condition": Object {
              "args": Array [],
              "callee": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 37,
                  "lastColumn": 14,
                  "lastLine": 37,
                },
                "name": "baz",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 37,
                "lastColumn": 16,
                "lastLine": 37,
              },
              "type": "FunctionCall",
              "typeArgs": Array [],
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 37,
              "lastColumn": 9,
              "lastLine": 39,
            },
            "type": "If",
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 40,
                "lastColumn": 11,
                "lastLine": 40,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 40,
              "lastColumn": 13,
              "lastLine": 40,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 41,
                "lastColumn": 11,
                "lastLine": 41,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 41,
              "lastColumn": 13,
              "lastLine": 41,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
        ],
        "location": Object {
          "firstColumn": 29,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 42,
        },
        "name": "bar4",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 45,
                "lastColumn": 11,
                "lastLine": 45,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 45,
              "lastColumn": 13,
              "lastLine": 45,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "alternatives": Array [],
            "body": Array [],
            "condition": Object {
              "args": Array [],
              "callee": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 46,
                  "lastColumn": 14,
                  "lastLine": 46,
                },
                "name": "baz",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 46,
                "lastColumn": 16,
                "lastLine": 46,
              },
              "type": "FunctionCall",
              "typeArgs": Array [],
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 46,
              "lastColumn": 9,
              "lastLine": 48,
            },
            "type": "If",
          },
          Object {
            "alternatives": Array [],
            "body": Array [],
            "condition": Object {
              "args": Array [],
              "callee": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 49,
                  "lastColumn": 14,
                  "lastLine": 49,
                },
                "name": "bar",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 49,
                "lastColumn": 16,
                "lastLine": 49,
              },
              "type": "FunctionCall",
              "typeArgs": Array [],
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 49,
              "lastColumn": 9,
              "lastLine": 51,
            },
            "type": "If",
          },
        ],
        "location": Object {
          "firstColumn": 29,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 52,
        },
        "name": "bar5",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 55,
                "lastColumn": 11,
                "lastLine": 55,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 55,
              "lastColumn": 13,
              "lastLine": 55,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "alternatives": Array [],
            "body": Array [],
            "condition": Object {
              "args": Array [],
              "callee": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 56,
                  "lastColumn": 14,
                  "lastLine": 56,
                },
                "name": "baz",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 56,
                "lastColumn": 16,
                "lastLine": 56,
              },
              "type": "FunctionCall",
              "typeArgs": Array [],
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 56,
              "lastColumn": 9,
              "lastLine": 58,
            },
            "type": "If",
          },
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 59,
                "lastColumn": 11,
                "lastLine": 59,
              },
              "name": "yob",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 59,
              "lastColumn": 13,
              "lastLine": 59,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
          Object {
            "alternatives": Array [],
            "body": Array [],
            "condition": Object {
              "args": Array [],
              "callee": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 60,
                  "lastColumn": 14,
                  "lastLine": 60,
                },
                "name": "bar",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 60,
                "lastColumn": 16,
                "lastLine": 60,
              },
              "type": "FunctionCall",
              "typeArgs": Array [],
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 60,
              "lastColumn": 9,
              "lastLine": 62,
            },
            "type": "If",
          },
        ],
        "location": Object {
          "firstColumn": 29,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 63,
        },
        "name": "bar6",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
    ],
    "location": Object {
      "firstColumn": 0,
      "firstLine": 1,
      "lastColumn": 1,
      "lastLine": 64,
    },
    "name": "CompoundExpression",
    "overridability": "Final",
    "superClass": null,
    "type": "Class",
    "typeArgDefs": Array [],
    "useStatements": Array [],
  },
  "type": "File",
  "useStatements": Array [],
}
`;

exports[`the prebuilt parser parses files consistently: Factorial.sand 1`] = `
Object {
  "imports": Array [],
  "location": Object {
    "firstColumn": 0,
    "firstLine": 1,
    "lastColumn": 1,
    "lastLine": 9,
  },
  "packageName": null,
  "privClasses": Array [],
  "pubClass": Object {
    "copies": Array [],
    "isPub": true,
    "items": Array [
      Object {
        "accessModifier": "pub",
        "args": Array [
          Object {
            "location": Object {
              "firstColumn": 27,
              "firstLine": 2,
              "lastColumn": 33,
              "lastLine": 2,
            },
            "name": "n",
            "type": "ArgDef",
            "valueType": Object {
              "args": Array [],
              "location": Object {
                "firstColumn": 30,
                "firstLine": 2,
                "lastColumn": 33,
                "lastLine": 2,
              },
              "name": "int",
              "type": "Type",
            },
          },
        ],
        "body": Array [
          Object {
            "alternatives": Array [
              Object {
                "alternativeType": "Else",
                "body": Array [
                  Object {
                    "left": Object {
                      "location": Object {
                        "firstColumn": 12,
                        "firstLine": 6,
                        "lastColumn": 13,
                        "lastLine": 6,
                      },
                      "name": "n",
                      "type": "Identifier",
                    },
                    "location": Object {
                      "firstColumn": 12,
                      "firstLine": 6,
                      "lastColumn": 41,
                      "lastLine": 6,
                    },
                    "operation": "*",
                    "right": Object {
                      "args": Array [
                        Object {
                          "left": Object {
                            "location": Object {
                              "firstColumn": 35,
                              "firstLine": 6,
                              "lastColumn": 36,
                              "lastLine": 6,
                            },
                            "name": "n",
                            "type": "Identifier",
                          },
                          "location": Object {
                            "firstColumn": 35,
                            "firstLine": 6,
                            "lastColumn": 40,
                            "lastLine": 6,
                          },
                          "operation": "-",
                          "right": Object {
                            "location": Object {
                              "firstColumn": 39,
                              "firstLine": 6,
                              "lastColumn": 40,
                              "lastLine": 6,
                            },
                            "type": "NumberLiteral",
                            "value": "1",
                          },
                          "type": "InfixExpr",
                        },
                      ],
                      "callee": Object {
                        "location": Object {
                          "firstColumn": 16,
                          "firstLine": 6,
                          "lastColumn": 34,
                          "lastLine": 6,
                        },
                        "name": "factorialRecursive",
                        "type": "Identifier",
                      },
                      "location": Object {
                        "firstColumn": 16,
                        "firstLine": 6,
                        "lastColumn": 41,
                        "lastLine": 6,
                      },
                      "type": "FunctionCall",
                      "typeArgs": Array [],
                    },
                    "type": "InfixExpr",
                  },
                ],
                "location": Object {
                  "firstColumn": 10,
                  "firstLine": 5,
                  "lastColumn": 9,
                  "lastLine": 7,
                },
                "type": "IfAlternative",
              },
            ],
            "body": Array [
              Object {
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 4,
                  "lastColumn": 13,
                  "lastLine": 4,
                },
                "type": "NumberLiteral",
                "value": "1",
              },
            ],
            "condition": Object {
              "left": Object {
                "location": Object {
                  "firstColumn": 11,
                  "firstLine": 3,
                  "lastColumn": 12,
                  "lastLine": 3,
                },
                "name": "n",
                "type": "Identifier",
              },
              "location": Object {
                "firstColumn": 11,
                "firstLine": 3,
                "lastColumn": 17,
                "lastLine": 3,
              },
              "operation": "==",
              "right": Object {
                "location": Object {
                  "firstColumn": 16,
                  "firstLine": 3,
                  "lastColumn": 17,
                  "lastLine": 3,
                },
                "type": "NumberLiteral",
                "value": "0",
              },
              "type": "InfixExpr",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 3,
              "lastColumn": 9,
              "lastLine": 7,
            },
            "type": "If",
          },
        ],
        "location": Object {
          "firstColumn": 4,
          "firstLine": 2,
          "lastColumn": 5,
          "lastLine": 8,
        },
        "name": "factorialRecursive",
        "returnType": Object {
          "args": Array [],
          "location": Object {
            "firstColumn": 36,
            "firstLine": 2,
            "lastColumn": 39,
            "lastLine": 2,
          },
          "name": "int",
          "type": "Type",
        },
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
    ],
    "location": Object {
      "firstColumn": 0,
      "firstLine": 1,
      "lastColumn": 1,
      "lastLine": 9,
    },
    "name": "Factorial",
    "overridability": "Final",
    "superClass": null,
    "type": "Class",
    "typeArgDefs": Array [],
    "useStatements": Array [],
  },
  "type": "File",
  "useStatements": Array [],
}
`;

exports[`the prebuilt parser parses files consistently: GenericFunctionCall.sand 1`] = `
Object {
  "imports": Array [],
  "location": Object {
    "firstColumn": 0,
    "firstLine": 1,
    "lastColumn": 1,
    "lastLine": 9,
  },
  "packageName": null,
  "privClasses": Array [],
  "pubClass": Object {
    "copies": Array [],
    "isPub": true,
    "items": Array [
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 3,
                "lastColumn": 11,
                "lastLine": 3,
              },
              "name": "foo",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 3,
              "lastColumn": 18,
              "lastLine": 3,
            },
            "type": "FunctionCall",
            "typeArgs": Array [
              Object {
                "args": Array [],
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 3,
                  "lastColumn": 15,
                  "lastLine": 3,
                },
                "name": "int",
                "type": "Type",
              },
            ],
          },
        ],
        "location": Object {
          "firstColumn": 30,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 4,
        },
        "name": "single",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
      Object {
        "accessModifier": null,
        "args": Array [],
        "body": Array [
          Object {
            "args": Array [],
            "callee": Object {
              "location": Object {
                "firstColumn": 8,
                "firstLine": 7,
                "lastColumn": 11,
                "lastLine": 7,
              },
              "name": "foo",
              "type": "Identifier",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 7,
              "lastColumn": 35,
              "lastLine": 7,
            },
            "type": "FunctionCall",
            "typeArgs": Array [
              Object {
                "args": Array [],
                "location": Object {
                  "firstColumn": 12,
                  "firstLine": 7,
                  "lastColumn": 15,
                  "lastLine": 7,
                },
                "name": "int",
                "type": "Type",
              },
              Object {
                "args": Array [],
                "location": Object {
                  "firstColumn": 17,
                  "firstLine": 7,
                  "lastColumn": 23,
                  "lastLine": 7,
                },
                "name": "String",
                "type": "Type",
              },
              Object {
                "args": Array [
                  Object {
                    "args": Array [],
                    "location": Object {
                      "firstColumn": 25,
                      "firstLine": 7,
                      "lastColumn": 29,
                      "lastLine": 7,
                    },
                    "name": "java.lang.Character",
                    "type": "Type",
                  },
                ],
                "location": Object {
                  "firstColumn": 25,
                  "firstLine": 7,
                  "lastColumn": 32,
                  "lastLine": 7,
                },
                "name": "rlist",
                "type": "Type",
              },
            ],
          },
        ],
        "location": Object {
          "firstColumn": 30,
          "firstLine": 1,
          "lastColumn": 5,
          "lastLine": 8,
        },
        "name": "multiple",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
    ],
    "location": Object {
      "firstColumn": 0,
      "firstLine": 1,
      "lastColumn": 1,
      "lastLine": 9,
    },
    "name": "GenericFunctionCall",
    "overridability": "Final",
    "superClass": null,
    "type": "Class",
    "typeArgDefs": Array [],
    "useStatements": Array [],
  },
  "type": "File",
  "useStatements": Array [],
}
`;

exports[`the prebuilt parser parses files consistently: HelloWorld.sand 1`] = `
Object {
  "imports": Array [],
  "location": Object {
    "firstColumn": 0,
    "firstLine": 1,
    "lastColumn": 1,
    "lastLine": 5,
  },
  "packageName": null,
  "privClasses": Array [],
  "pubClass": Object {
    "copies": Array [],
    "isPub": true,
    "items": Array [
      Object {
        "accessModifier": "pub",
        "args": Array [
          Object {
            "location": Object {
              "firstColumn": 13,
              "firstLine": 2,
              "lastColumn": 27,
              "lastLine": 2,
            },
            "name": "args",
            "type": "ArgDef",
            "valueType": Object {
              "args": Array [
                Object {
                  "args": Array [],
                  "location": Object {
                    "firstColumn": 19,
                    "firstLine": 2,
                    "lastColumn": 25,
                    "lastLine": 2,
                  },
                  "name": "String",
                  "type": "Type",
                },
              ],
              "location": Object {
                "firstColumn": 19,
                "firstLine": 2,
                "lastColumn": 27,
                "lastLine": 2,
              },
              "name": "array",
              "type": "Type",
            },
          },
        ],
        "body": Array [
          Object {
            "args": Array [
              Object {
                "location": Object {
                  "firstColumn": 27,
                  "firstLine": 3,
                  "lastColumn": 41,
                  "lastLine": 3,
                },
                "type": "StringLiteral",
                "value": "\\"Hello world!\\"",
              },
            ],
            "callee": Object {
              "left": Object {
                "left": Object {
                  "location": Object {
                    "firstColumn": 8,
                    "firstLine": 3,
                    "lastColumn": 14,
                    "lastLine": 3,
                  },
                  "name": "System",
                  "type": "Identifier",
                },
                "location": Object {
                  "firstColumn": 8,
                  "firstLine": 3,
                  "lastColumn": 18,
                  "lastLine": 3,
                },
                "right": "out",
                "type": "DotExpr",
              },
              "location": Object {
                "firstColumn": 8,
                "firstLine": 3,
                "lastColumn": 26,
                "lastLine": 3,
              },
              "right": "println",
              "type": "DotExpr",
            },
            "location": Object {
              "firstColumn": 8,
              "firstLine": 3,
              "lastColumn": 42,
              "lastLine": 3,
            },
            "type": "FunctionCall",
            "typeArgs": Array [],
          },
        ],
        "location": Object {
          "firstColumn": 4,
          "firstLine": 2,
          "lastColumn": 5,
          "lastLine": 4,
        },
        "name": "main",
        "returnType": null,
        "type": "MethodDeclaration",
        "typeArgs": Array [],
      },
    ],
    "location": Object {
      "firstColumn": 0,
      "firstLine": 1,
      "lastColumn": 1,
      "lastLine": 5,
    },
    "name": "HelloWorld",
    "overridability": "Final",
    "superClass": null,
    "type": "Class",
    "typeArgDefs": Array [],
    "useStatements": Array [],
  },
  "type": "File",
  "useStatements": Array [],
}
`;

exports[`the prebuilt parser throws parse errors consistently: FullyQualifiedTypes.sand error 1`] = `
[Error: Parse error on line 2:
...foo(): java.util?.ArrayList { } }
--------------------^
Expecting ';', '>', ',', '{', '[', ')', '=', got '.']
`;

exports[`the prebuilt parser throws parse errors consistently: FullyQualifiedTypes.sand error line number 1`] = `2`;

exports[`the prebuilt parser throws parse errors consistently: assignments/AssignmentExpression.sand error 1`] = `
[Error: Parse error on line 3:
... assExpr() { x(a = b;) } }
--------------------^
Expecting '<', '>', ',', '[', '*', ')', '-', '**', '/', '%', '+', '<=', '>=', '==', '!=', '&&', '||', '..=', '..', 'as!', got '=']
`;

exports[`the prebuilt parser throws parse errors consistently: assignments/AssignmentExpression.sand error line number 1`] = `3`;

exports[`the prebuilt parser throws parse errors consistently: assignments/MissingSemicolon.sand error 1`] = `
[Error: Parse error on line 4:
...ngSemi() { a = b } }
--------------------^
Expecting ';', '<', '>', '[', '*', '-', '**', '/', '%', '+', '<=', '>=', '==', '!=', '&&', '||', '..=', '..', 'as!', got '}']
`;

exports[`the prebuilt parser throws parse errors consistently: assignments/MissingSemicolon.sand error line number 1`] = `4`;

exports[`the prebuilt parser throws parse errors consistently: genericFunctionCall/Extends.sand error 1`] = `
[Error: Parse error on line 3:
... { foo() { bar<T extends String>()...
--------------------^
Expecting ';', '<', '>', ',', '{', '}', '[', ']', '*', '(', ')', '=', '**=', '*=', '/=', '%=', '+=', '-=', '-', '**', '/', '%', '+', '<=', '>=', '==', '!=', '&&', '||', '.', 'FUNCTION_CALL_TYPE_ARG_LEFT_ANGLE_BRACKET', '..=', '..', 'as!', got 'extends']
`;

exports[`the prebuilt parser throws parse errors consistently: genericFunctionCall/Extends.sand error line number 1`] = `3`;

exports[`the prebuilt parser throws parse errors consistently: genericFunctionCall/MissingParens.sand error 1`] = `
[Error: Parse error on line 4:
...ing() { foo<int> } }
--------------------^
Expecting 'IDENTIFIER', '[', '(', 'NUMBER', 'STRING', 'CHARACTER', '-', '!', '~', 'OBJECT_LITERAL_TYPE', got '}']
`;

exports[`the prebuilt parser throws parse errors consistently: genericFunctionCall/MissingParens.sand error line number 1`] = `4`;

exports[`the prebuilt parser throws parse errors consistently: genericFunctionCall/NoArgs.sand error 1`] = `
[Error: Parse error on line 3:
...{ noArgs() { foo<>() } }
--------------------^
Expecting 'IDENTIFIER', '[', '(', 'NUMBER', 'STRING', 'CHARACTER', '-', '!', '~', 'OBJECT_LITERAL_TYPE', got '>']
`;

exports[`the prebuilt parser throws parse errors consistently: genericFunctionCall/NoArgs.sand error line number 1`] = `3`;

exports[`the prebuilt parser throws parse errors consistently: genericMethodDeclarations/MissingParens.sand error 1`] = `
[Error: Parse error on line 2:
...singParens { <T> MissingParens<T> ...
--------------------^
Expecting 'use', 'IDENTIFIER', 'copy', 'pub', '}', 'prot', got 'OBJECT_LITERAL_TYPE']
`;

exports[`the prebuilt parser throws parse errors consistently: genericMethodDeclarations/MissingParens.sand error line number 1`] = `2`;

exports[`the prebuilt parser throws parse errors consistently: genericMethodDeclarations/NoArgs.sand error 1`] = `
[Error: Parse error on line 2:
... NoArgs { noArgs<>() { } }
--------------------^
Expecting 'IDENTIFIER', got '>']
`;

exports[`the prebuilt parser throws parse errors consistently: genericMethodDeclarations/NoArgs.sand error line number 1`] = `2`;

exports[`the prebuilt parser throws parse errors consistently: localVariableDeclarations/DeclarationExpression.sand error 1`] = `
[Error: Parse error on line 3:
...sion { foo() { x(let foo = 3;) } }
--------------------^
Expecting 'IDENTIFIER', '[', '(', ')', 'if', 'NUMBER', 'STRING', 'CHARACTER', '-', '!', '~', 'OBJECT_LITERAL_TYPE', got 'let']
`;

exports[`the prebuilt parser throws parse errors consistently: localVariableDeclarations/DeclarationExpression.sand error line number 1`] = `3`;

exports[`the prebuilt parser throws parse errors consistently: localVariableDeclarations/MissingSemicolon.sand error 1`] = `
[Error: Parse error on line 4:
...() { let bar = 2 } }
--------------------^
Expecting ';', '<', '>', '[', '*', '-', '**', '/', '%', '+', '<=', '>=', '==', '!=', '&&', '||', '..=', '..', 'as!', got '}']
`;

exports[`the prebuilt parser throws parse errors consistently: localVariableDeclarations/MissingSemicolon.sand error line number 1`] = `4`;

exports[`the prebuilt parser throws parse errors consistently: nullable/DoubleNullable.sand error 1`] = `
[Error: Parse error on line 2:
... { foo(): String?? { } }
--------------------^
Expecting ';', '>', ',', '{', '[', ')', '=', got '?']
`;

exports[`the prebuilt parser throws parse errors consistently: nullable/DoubleNullable.sand error line number 1`] = `2`;

exports[`the prebuilt parser throws parse errors consistently: nullable/NullableClass.sand error 1`] = `
[Error: Parse error on line 1:
...ass NullableClass? { }
--------------------^
Expecting '<', 'extends', '{', got '?']
`;

exports[`the prebuilt parser throws parse errors consistently: nullable/NullableClass.sand error line number 1`] = `1`;

exports[`the prebuilt parser throws parse errors consistently: nullable/NullableGeneric.sand error 1`] = `
[Error: Parse error on line 1:
...NullableGeneric<T?> { }
--------------------^
Expecting '>', 'extends', ',', got '?']
`;

exports[`the prebuilt parser throws parse errors consistently: nullable/NullableGeneric.sand error line number 1`] = `1`;

exports[`the prebuilt parser throws parse errors consistently: return/MissingSemicolon.sand error 1`] = `
[Error: Parse error on line 4:
...emi() { return 8 } }
--------------------^
Expecting ';', '<', '>', '[', '*', '-', '**', '/', '%', '+', '<=', '>=', '==', '!=', '&&', '||', '..=', '..', 'as!', got '}']
`;

exports[`the prebuilt parser throws parse errors consistently: return/MissingSemicolon.sand error line number 1`] = `4`;

exports[`the prebuilt parser throws parse errors consistently: return/MissingSemicolonNoVal.sand error 1`] = `
[Error: Parse error on line 4:
...noVal() { return } }
--------------------^
Expecting ';', 'IDENTIFIER', '[', '(', 'if', 'NUMBER', 'STRING', 'CHARACTER', '-', '!', '~', 'OBJECT_LITERAL_TYPE', got '}']
`;

exports[`the prebuilt parser throws parse errors consistently: return/MissingSemicolonNoVal.sand error line number 1`] = `4`;

exports[`the prebuilt parser throws parse errors consistently: return/ReturnExpression.sand error 1`] = `
[Error: Parse error on line 2:
...rnExpression { x(return;) }
--------------------^
Expecting 'IDENTIFIER', ')', got 'return_']
`;

exports[`the prebuilt parser throws parse errors consistently: return/ReturnExpression.sand error line number 1`] = `2`;

exports[`the prebuilt parser throws parse errors consistently: typedObjectLiteral/Extends.sand error 1`] = `
[Error: Parse error on line 3:
...xtends() { Foo<T extends ArrayList...
--------------------^
Expecting ';', '<', '>', ',', '{', '}', '[', ']', '*', '(', ')', '=', '**=', '*=', '/=', '%=', '+=', '-=', '-', '**', '/', '%', '+', '<=', '>=', '==', '!=', '&&', '||', '.', 'FUNCTION_CALL_TYPE_ARG_LEFT_ANGLE_BRACKET', '..=', '..', 'as!', got 'extends']
`;

exports[`the prebuilt parser throws parse errors consistently: typedObjectLiteral/Extends.sand error line number 1`] = `3`;
